--- a/templates/Back/article/index.html.twig
+++ b/templates/Back/article/index.html.twig
@@ -3,6 +3,46 @@
 {% block title %}Back-office - Gestion des articles{% endblock %}
 
 {% block main %}
+
+
+<style>
+
+/* custom_pagination_styles.css */
+.pagination {
+    display: flex;
+    justify-content: center;
+    list-style: none;
+    padding: 0;
+}
+
+.pagination li {
+    margin: 0 5px;
+}
+
+.pagination li a {
+    display: inline-block;
+    padding: 5px 10px;
+    text-decoration: none;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    color: #333;
+}
+
+.pagination li.active a {
+    background-color: #007bff;
+    color: #fff;
+    border-color: #007bff;
+}
+
+.pagination li.disabled a {
+    pointer-events: none;
+    background-color: #eee;
+    color: #888;
+    border-color: #ccc;
+}
+
+</style>
+
     <div class="container">
         <div class="row justify-content-end">
             <div class="col-md-6 text-right">
@@ -75,5 +115,7 @@
                 {% endif %}
             </ul>
         </nav>
+
+        
     {% endif %}
 {% endblock %}
