verification before feres after ezzdine

--- a/templates/Front/base.html.twig
+++ b/templates/Front/base.html.twig
@@ -208,10 +208,10 @@
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
       </div>
-    </div> #}
+    </div>
 
   </footer>
-{%endblock %}
+{% endblock %}
   <!-- Scroll Top -->
   <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
