--- a/templates/Front/rendez_vous/showRV.html.twig
+++ b/templates/Front/rendez_vous/showRV.html.twig
@@ -68,7 +68,7 @@
         <!-- Ajoutez d'autres options pour les champs de tri si nécessaire -->
     </select>
 
-    <button type="submit" class="btn btn-primary tributton">Trier</button>
+    <button type="submit" class="btn  tributton"   style="background-color: #17a2b8 " >Trier</button>
 </form>
 
 
@@ -125,7 +125,7 @@
         </tbody>
     </table>
     </div>
-    <a style="margin-left: 39px; margin-top: 10px;" href="{{ path('front_rendezVous_add') }}" class="btn btn-sm btn-primary">
+    <a style="margin-left: 39px; margin-top: 10px;background-color: #17a2b8" href="{{ path('front_rendezVous_add') }}" class="btn btn-sm btn-primary">
              <i class="fa fa-edit" aria-hidden="true"></i> {{ 'Ajouter Rendez Vous'|trans }}
     </a>
 
