--- a/templates/Back/parking/index.html.twig
+++ b/templates/Back/parking/index.html.twig
@@ -116,14 +116,14 @@
         <thead>
             <tr>
                 {# <th>Id_parking</th> #}
-                <th>Nom<button class="sort-button" data-sort-by="Nom"><div><i class="align-middle me-2" data-feather="arrow-down"></i></div>Trier par nom</button></th>
-                <th>Address<button class="sort-button" data-sort-by="Address">Trier par address</button></th>
+                <th>Nom<button class="sort-button" data-sort-by="Nom" style="background:transparent; border-width:0px"><img src="{{asset('parking/img/parallel-arrow.png')}}" style="width:30px; border-radius: 10%;" /></button></th>
+                <th>Address<button class="sort-button" data-sort-by="Address" style="background:transparent; border-width:0px"><img src="{{asset('parking/img/parallel-arrow.png')}}" style="width:30px; border-radius: 10%;" /></button></th>
                 {# <th>Latitude</th>
                 <th>Longitude</th> #}
                 {# <th>NombrePlaceMax</th>
                 <th>NombrePlaceOcc</th> #}
-                <th>Nombre de plces libres<button class="sort-button" data-sort-by="Nombre">Trier par nb places</button></th>
-                <th>Etat<button class="sort-button" data-sort-by="Etat">Trier par etat</button></th>
+                <th>Nombre de plces libres<button class="sort-button" data-sort-by="Nombre" style="background:transparent; border-width:0px"><img src="{{asset('parking/img/parallel-arrow.png')}}" style="width:30px; border-radius: 10%;" /></button></th>
+                <th>Etat<button class="sort-button" data-sort-by="Etat" style="background:transparent; border-width:0px"><img src="{{asset('parking/img/parallel-arrow.png')}}" style="width:30px; border-radius: 10%;" /></button></th>
                 <th></th>
             </tr>
         </thead>
