--- a/templates/Front/place/index.html.twig
+++ b/templates/Front/place/index.html.twig
@@ -30,9 +30,9 @@
             <thead>
                 <tr>
                     {# <th>RefPlace</th> #}
-                    <th>Numéro<button class="sort-button" data-sort-by="numero">Trier par numéro</button></th>
-                    <th>Type<button class="sort-button" data-sort-by="type">Trier par type</button></th>
-                    <th>Etat<button class="sort-button" data-sort-by="etat">Trier par état</button></th>
+                    <th>Numéro<button class="sort-button" data-sort-by="numero" style="background:transparent; border-width:0px"><img src="{{asset('parking/img/parallel-arrow.png')}}" style="width:30px; border-radius: 10%;" /></button></th>
+                    <th>Type<button class="sort-button" data-sort-by="type" style="background:transparent; border-width:0px"><img src="{{asset('parking/img/parallel-arrow.png')}}" style="width:30px; border-radius: 10%;" /></button></th>
+                    <th>Etat<button class="sort-button" data-sort-by="etat" style="background:transparent; border-width:0px"><img src="{{asset('parking/img/parallel-arrow.png')}}" style="width:30px; border-radius: 10%;" /></button></th>
                     <th></th>
                     {# <th>actions</th> #}
                 </tr>
